Improved Store filteration functionality

--- a/Sukhdari_Client/Pages/Index.razor
+++ b/Sukhdari_Client/Pages/Index.razor
@@ -1,6 +1,7 @@
 @page "/"
 @layout HomeLayout
 @inject IStoreService Store
+@inject IJSRuntime JSRuntime
 @inject Microsoft.Extensions.Configuration.IConfiguration config
 <div id="carouselDiv" class="row p-0 m-0">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -42,7 +43,9 @@
 <div class="row m-0">
     <div class="card bg-light col-2 m-2 p-2 filterDiv" style="left:1% ">
         <form>
+
             @* Uncomment the following code if you're handling multiple countries *@
+
             @* <h4>Filters</h4>
             <hr />
             <h5>Location</h5>
@@ -98,7 +101,7 @@
                 }
                 @foreach (var type in storeTypes)
                     {
-                        <input class="form-check-input" type="checkbox" @onchange="@(async (e) => await StoreTypeCheckbox(type, e.Value))">
+                        <input class="form-check-input" type="radio" name="categoryRadioButton" @onchange="@(async (e) => await StoreTypeCheckbox(type, e.Value))">
                         <label class="form-check-label" for="flexCheckDefault">
                             @type
                         </label>
@@ -107,37 +110,38 @@
             </div>
             <hr />
 
-
-            @if(Attributes!= null && Attributes.Count>0)
-            {
-                foreach(var storeAttrib in Attributes)
+            <form id="AttributesForm">
+                @if(Attributes!= null && Attributes.Count>0)
                 {
-                    <h5>@storeAttrib.ToUpper()</h5>
-                    foreach(var store in Stores)
+                    foreach(var storeAttrib in Attributes)
                     {
-                        if (store.Attributes != null && store.Attributes.Count > 0)
+                        <h5>@storeAttrib.ToUpper()</h5>
+                        foreach (var store in ParticularTypeStores)
                         {
-                            foreach (var attrib in store.Attributes)
+                            if (store.Attributes != null && store.Attributes.Count > 0)
                             {
-                                if(attrib.Key.ToLower() == storeAttrib)
+                                foreach (var attrib in store.Attributes)
                                 {
-                                    if (!AttributeValues.Contains(attrib.Value.ToLower()))
+                                    if(attrib.Key.ToLower() == storeAttrib)
                                     {
-                                        <div class="form-check ml-2">
-                                            <input type="checkbox" class="form-check-input" @onchange="@(async (e)=> await HandleAttributesCheckBox(attrib, e.Value))" />
-                                            <label class="form-check-label">@attrib.Value</label>
-                                        </div>
-                                        AttributeValues.Add(attrib.Value.ToLower());
+                                        if (!AttributeValues.Contains(attrib.Value.ToLower()))
+                                        {
+                                            AttributeValues.Add(attrib.Value.ToLower());
+                                            <div class="form-check ml-2">
+                                                <input type="checkbox" class="form-check-input" @onchange="@(async (e)=> await HandleAttributesCheckBox(attrib, e.Value))" />
+                                                <label class="form-check-label">@attrib.Value</label>
+                                            </div>
+                                        }
                                     }
                                 }
                             }
                         }
                     }
+                    <hr />
+                    AttributeValues.Clear();
                 }
-                <hr />
-                AttributeValues.Clear();
-            }
-        
+                <input type="reset" hidden />
+            </form>
 
             <h5>DISCOUNT</h5>
             <div class="form-check ml-2">
@@ -297,7 +301,8 @@
     public IEnumerable<StoreDTO> test { get; set; }
     public List<string> countries = new List<string>();
     public List<string> storeTypes = new List<string>();
-    public List<string> storeTypeList = new List<string>();
+    @* public List<string> storeTypeList = new List<string>(); *@
+    public string selectedStoreType { get; set; } = "";
     int[] checkBoxIndex = new int[3]{ 0, 0, 0 };
     public float[] array;
     public int[] discountList = { 25, 50, 75 };
@@ -308,7 +313,8 @@
     public List<string> Attributes { get; set; } = new List<string>(); //It'll store attributes of all stores
     public List<StoreAttributesDTO> selectedAttributes = new List<StoreAttributesDTO>(); // To store IDs of Attributes which the user have selected
     public List<String> AttributeValues { get; set; } = new List<string>(); //To avoid duplicate attribute values
-                                                                            //My code ends here
+    public IEnumerable<StoreDTO> ParticularTypeStores { get; set; } = new List<StoreDTO>(); //To hold the stores of particular store type
+    //My code ends here
 
     public List<string> selectedCountries = new List<string>();
     protected override async Task OnInitializedAsync()
@@ -317,23 +323,6 @@
         AllStores = await Store.getAllStores();
         FilteredStores = Stores;
         AllTags = await Store.getAllStoreTags();
-
-        if(Stores != null && Stores.Any()) //This portion is going to store the attributes of all Stores in 'Attributes'' property
-        {
-            foreach(var store in Stores)
-            {
-                if(store.Attributes!= null && store.Attributes.Count>0)
-                {
-                    foreach(var attrib in store.Attributes)
-                    {
-                        if(!Attributes.Contains(attrib.Key.ToLower())) //To avoid duplication
-                        {
-                            Attributes.Add(attrib.Key.ToLower());
-                        }
-                    }
-                }
-            }
-        }
 
         if(Stores != null && Stores.Any())
         {
@@ -410,10 +399,12 @@
     {
         min = 0;
         max = 10000;
-        Stores = await Store.getAllStores();
+        //Stores = await Store.getAllStores();
         FilteredStores = Stores;
         selectedAttributes.Clear();
         AttributeValues.Clear();
+        Attributes.Clear();
+        selectedStoreType = "";
     }
     public async Task searchResults()
     {
@@ -495,38 +486,29 @@
     }
     public async Task StoreTypeCheckbox(string storeTypeStr, object checkedValue)
     {
-        if ((bool)checkedValue)
+        if(selectedStoreType != "" && Attributes.Count>0)
         {
-            if (!storeTypeList.Contains(storeTypeStr))
-            {
-                storeTypeList.Add(storeTypeStr);
-            }
+            await JSRuntime.InvokeVoidAsync("resetAttributes");
         }
-        else
+        selectedStoreType = storeTypeStr;
+        selectedAttributes.Clear();
+        FilteredStores = AllStores.Where(i => i.Type == selectedStoreType).ToList();
+        ParticularTypeStores = FilteredStores;
+
+        Attributes.Clear();
+        if (FilteredStores != null && FilteredStores.Any()) //This portion is going to store the attributes of all Stores in 'Attributes'' property
         {
-            if (storeTypeList.Contains(storeTypeStr))
+            foreach (var store in FilteredStores)
             {
-                storeTypeList.Remove(storeTypeStr);
-            }
-        }
-        if (!storeTypeList.Any())
-        {
-            await ResetStores();
-        }
-        else
-        {
-            if (storeTypeList != null && storeTypeList.Any())
-            {
-                FilteredStores = AllStores.Where(i => i.Type == storeTypeList[0]).ToList();
-                int count = 0;
-                foreach (var type in storeTypeList)
-                {   
-                    if (count != 0)
+                if (store.Attributes != null && store.Attributes.Count > 0)
+                {
+                    foreach (var attrib in store.Attributes)
                     {
-                        var testStore = AllStores.Where(i => i.Type == type).ToList();
-                        FilteredStores = FilteredStores.Union(testStore); 
+                        if (!Attributes.Contains(attrib.Key.ToLower())) //To avoid duplication
+                        {
+                            Attributes.Add(attrib.Key.ToLower());
+                        }
                     }
-                    count++;
                 }
             }
         }
@@ -544,24 +526,42 @@
         }
         if(selectedAttributes.Any()) //Handling multiple Store Attributes Selection
         {
+            int i = 0;
             List<StoreDTO> stores = new List<StoreDTO>();
             List<StoreDTO> AttributeFilteredStores = new List<StoreDTO>();
             foreach(var attrib in selectedAttributes)
             {
-                foreach(var store in Stores)
+                foreach(var store in ParticularTypeStores)
                 {
                     var result = store.Attributes.Where(i => i.Value.ToLower() == attrib.Value.ToLower());
                     if (result.Any())
                         AttributeFilteredStores.Add(store);
                 }
-                stores = stores.Union(AttributeFilteredStores).ToList();
-                AttributeFilteredStores.Clear();
+                
+                if (i == 0)
+                {
+                    stores = AttributeFilteredStores.ToList();
+                    i++;
+                }
+                else
+                {
+                    stores = stores.Intersect(AttributeFilteredStores).ToList();
+                }
+                AttributeFilteredStores.Clear(); 
             }
             FilteredStores = stores;
         }
         else
         {
-            await ResetStores();
+            if(selectedStoreType != "")
+            {
+                FilteredStores = AllStores.Where(i => i.Type == selectedStoreType).ToList();
+            }
         }
     }
 }
+<script>
+    function resetAttributes() {
+        document.getElementById("AttributesForm").reset();
+    }
+</script>
