--- a/Sukhdari_Client/_Imports.razor
+++ b/Sukhdari_Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using Models
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @using DataAccess.Data
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Popups
